fix: Adjust Card Spacing in TwoWeekTripPlan Section
- Resolved an issue where the spacing between cards in the TwoWeekTripPlan section was inconsistent across various screen sizes.
- Adjusted padding and margin to ensure uniform spacing and enhance visual appeal.

--- a/src/partials/_twoWeekTripPlan.scss
+++ b/src/partials/_twoWeekTripPlan.scss
@@ -161,6 +161,9 @@
   align-self: flex-start;
   margin-top: 6px;
   border: none;
+  @media (min-width: 1024px) {
+    margin-block: auto;
+  }
 }
 
 .card-avatar {
@@ -178,8 +181,18 @@
   display: flex;
   flex-direction: column;
   gap: 6px;
+  // @media (min-width: 1024px) {
+  //   display: grid;
+  //   grid-template-columns: 1fr 1fr;
+  // }
+}
+
+.user-content-container {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
   @media (min-width: 1024px) {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    flex-direction: row;
+    gap: 10px;
   }
 }
